# seo-auditor-mcp

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  config.py  install.py  install.sh  pyproject.toml  requirements.txt  server.py  setup.py  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
analyzers/: __init__.py  onpage_seo.py  performance.py  site_crawler.py  technical_seo.py
database/: __init__.py  models.py
