[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seo-auditor-mcp"
version = "1.0.0"
description = "Comprehensive SEO auditing and analysis MCP server for LLMs"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SEO Auditor Contributors", email = "contributors@seo-auditor.dev"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["seo", "mcp", "claude-code", "web-analysis", "performance", "lighthouse", "technical-seo"]
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",
    "playwright>=1.40.0",
    "pydantic>=2.5.0",
    "asyncio-throttle>=1.0.2",
    "aiofiles>=23.2.1",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "urllib3>=2.0.0",
    "python-dotenv>=1.0.0",
    "dataclasses-json>=0.6.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/tuckercoffey/seo-auditor-mcp"
Repository = "https://github.com/tuckercoffey/seo-auditor-mcp.git"
Issues = "https://github.com/tuckercoffey/seo-auditor-mcp/issues"
Documentation = "https://github.com/tuckercoffey/seo-auditor-mcp#readme"

[project.scripts]
seo-auditor-install = "install:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["analyzers*", "database*"]

[tool.black]
line-length = 100
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    ".eggs",
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
asyncio_mode = "auto"